--- a/src/sass/components/_list_item.scss
+++ b/src/sass/components/_list_item.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	background: rgba(209, 209, 209, 0.671);
+	background: rgba(224, 121, 121, 0.698);
+	border-bottom: 1px solid grey;
 	padding: 0.75rem;
 }
