--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -103,6 +103,18 @@
 	}
 }
 
+#previous-results,
+#next-results {
+	i {
+		font-size: 2rem;
+	}
+}
+
+#page-number {
+	font-family: 'Raleway', sans-serif;
+	font-size: 1.8rem;
+}
+
 @media screen and (max-width: 820px) {
 	#showcase {
 		text-align: center;
