--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -33,6 +33,13 @@
 	border: 2px solid white;
 }
 
+#previous-results,
+#next-results {
+	margin: 0 0.5rem;
+	background: none;
+	border: none;
+}
+
 @media screen and (max-width: 820px) {
 	#hamburger-menu {
 		display: flex;
