--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -3,7 +3,7 @@
 #content {
 	#showcase {
 		display: flex;
-		height: 100vh;
+		min-height: 100vh;
 		justify-content: flex-end;
 		align-items: center;
 
@@ -16,7 +16,7 @@
 	#about-site {
 		display: flex;
 		flex-direction: column;
-		height: 100vh;
+		min-height: 100vh;
 		justify-content: center;
 		background: rgb(53, 144, 248);
 	}
@@ -26,7 +26,7 @@
 		justify-content: center;
 		flex-direction: column;
 		align-items: center;
-		height: 20vh;
+		min-height: 20vh;
 		background: rgb(248, 205, 205);
 	}
 
@@ -47,7 +47,7 @@
 	}
 	#used-technologies {
 		display: flex;
-		height: 20vh;
+		min-height: 20vh;
 		justify-content: center;
 	}
 }
