--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -81,6 +81,7 @@
 }
 
 #recipes-list {
+	font-family: 'Raleway', sans-serif;
 	li {
 		list-style: none;
 		a {
@@ -113,6 +114,14 @@
 #page-number {
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.8rem;
+}
+
+#recipe-details-wraper {
+	font-family: 'Raleway', sans-serif;
+}
+
+#used-technologies {
+	font-family: 'Raleway', sans-serif;
 }
 
 @media screen and (max-width: 820px) {
