--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -32,3 +32,15 @@
 		border-radius: 100px;
 	}
 }
+
+#recipe-details-wraper {
+	#recipe-info {
+		img {
+			align-self: center;
+			border: none;
+			height: 60%;
+			width: 60%;
+			border-radius: 100px;
+		}
+	}
+}
