--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -32,23 +32,47 @@
 
 	#recipe-finder {
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		min-height: 100vh;
-		justify-content: center;
+		justify-content: space-between;
 		background: rgb(194, 88, 243);
 
 		.search-component-wraper {
-			align-self: flex-end;
+			align-self: center;
+			order: 2;
 
 			.btn-wraper {
 				display: flex;
 			}
+		}
+		#recipe-details-wraper {
+			display: flex;
+			align-self: center;
+			order: 1;
+
+			#recipe-info {
+				border-radius: 30px;
+				padding: 1rem 0.4rem;
+				background: aliceblue;
+				text-align: center;
+				display: flex;
+				flex-direction: column;
+				min-height: 70vh;
+			}
+		}
+		.text-wraper {
+			background: aliceblue;
+			border-radius: 30px;
+			padding: 1rem;
+			margin-left: 0.5rem;
+			min-height: 70vh;
 		}
 	}
 	#used-technologies {
 		display: flex;
 		min-height: 20vh;
 		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -67,12 +91,16 @@
 		}
 
 		#recipe-finder {
+			flex-direction: column;
 			.search-component-wraper {
-				align-self: center;
+				order: 1;
 			}
 			.btn-wraper {
 				display: flex;
 				justify-self: center;
+			}
+			#recipe-details-wraper {
+				order: 2;
 			}
 		}
 	}
